--- a/app/src/main/res/xml/licenses.xml
+++ b/app/src/main/res/xml/licenses.xml
@@ -19,7 +19,7 @@
     </item>
     <item>
         <identifier>Apache-2.0</identifier>
-        <projectName>Markwon (io.noties.markwon)</projectName>
+        <projectName>Markwon (io.noties.markwon:core / io.noties.markwon:linkify)</projectName>
         <projectUrl>https://github.com/noties/Markwon/</projectUrl>
     </item>
     <item>
@@ -36,6 +36,12 @@
         <identifier>Apache-2.0</identifier>
         <projectName>Emoji (com.vanniktech:emoji-twitter)</projectName>
         <projectUrl>https://github.com/vanniktech/Emoji</projectUrl>
+    </item>
+    <item>
+        <identifier>Apache-2.0</identifier>
+        <projectDev>Saket Narayan</projectDev>
+        <projectName>BetterLinkMovementMethod (me.saket:better-link-movement-method)</projectName>
+        <projectUrl>https://github.com/saket/Better-Link-Movement-Method</projectUrl>
     </item>
     <item>
         <identifier>Apache-2.0</identifier>
