--- a/app/src/main/res/layout/dia_query.xml
+++ b/app/src/main/res/layout/dia_query.xml
@@ -4,14 +4,15 @@
     android:id="@+id/dia_query_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@drawable/dia_query_background"
     android:gravity="center"
     android:theme="@style/Theme.RBV">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp">
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
