--- a/app/src/main/res/layout/rec_view_small.xml
+++ b/app/src/main/res/layout/rec_view_small.xml
@@ -9,8 +9,7 @@
     <CheckBox
         android:id="@+id/rec_small_checkbox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:buttonTint="@color/ijblue" />
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
