--- a/app/src/main/res/layout/dia_import.xml
+++ b/app/src/main/res/layout/dia_import.xml
@@ -37,7 +37,6 @@
                     android:id="@+id/dia_import_radio_integrate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:buttonTint="@color/ijblue"
                     android:text="@string/import_mode_integrate"
                     android:textColor="@color/light_black"
                     android:textSize="20sp" />
@@ -46,7 +45,6 @@
                     android:id="@+id/dia_import_radio_skip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:buttonTint="@color/ijblue"
                     android:text="@string/import_mode_skip"
                     android:textColor="@color/light_black"
                     android:textSize="20sp" />
@@ -55,83 +53,43 @@
                     android:id="@+id/dia_import_radio_duplicates"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:buttonTint="@color/ijblue"
                     android:text="@string/import_mode_duplicates"
                     android:textColor="@color/light_black"
                     android:textSize="20sp" />
             </RadioGroup>
 
-
-            <LinearLayout
-                android:id="@+id/dia_import_include_settings_layout"
+            <CheckBox
+                android:id="@+id/dia_import_include_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/dia_import_radio"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <CheckBox
-                    android:id="@+id/dia_import_include_settings"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:buttonTint="@color/ijblue"
-                    android:contentDescription="@string/import_export_include_settings" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="5dp"
-                    android:text="@string/import_export_include_settings"
-                    android:textColor="@color/light_black"
-                    android:textSize="16sp" />
-            </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:text="@string/import_export_include_settings"
+                android:textColor="@color/light_black"
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:id="@+id/dia_import_include_media_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/dia_import_include_settings_layout"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:layout_below="@id/dia_import_include_settings"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
 
-                <LinearLayout
+                <CheckBox
+                    android:id="@+id/dia_import_include_media"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
-
-                    <CheckBox
-                        android:id="@+id/dia_import_include_media"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:buttonTint="@color/ijblue"
-                        android:contentDescription="@string/import_export_include_media" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingStart="5dp"
-                        android:paddingEnd="5dp"
-                        android:text="@string/import_export_include_media"
-                        android:textColor="@color/light_black"
-                        android:textSize="16sp" />
-                </LinearLayout>
+                    android:text="@string/import_export_include_media"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/dia_import_include_media_warn_no_files"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
+                    android:layout_marginTop="5dp"
                     android:text="@string/import_export_include_media_warn_no_files"
-                    android:textAlignment="center"
                     android:textColor="@color/warn_red"
                     android:textSize="16sp"
                     android:textStyle="bold" />
