--- a/app/src/main/res/layout/dia_query.xml
+++ b/app/src/main/res/layout/dia_query.xml
@@ -33,12 +33,8 @@
 
             <Button
                 android:id="@+id/query_button_hide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:gravity="center"
+                style="@style/material_button"
                 android:text="@string/query_show"
-                android:textColor="@color/button"
                 android:textSize="@dimen/card_back_size_default" />
 
             <TextView
@@ -104,32 +100,20 @@
 
             <Button
                 android:id="@+id/query_button_media_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:gravity="center"
+                style="@style/material_button"
                 android:text="@string/query_media_image"
-                android:textColor="@color/button"
                 android:textSize="14sp" />
 
             <Button
                 android:id="@+id/query_button_media_other"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:gravity="center"
+                style="@style/material_button"
                 android:text="@string/query_media_all"
-                android:textColor="@color/button"
                 android:textSize="14sp" />
 
             <Button
                 android:id="@+id/query_button_notes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:gravity="center"
+                style="@style/material_button"
                 android:text="@string/query_notes"
-                android:textColor="@color/button"
                 android:textSize="14sp" />
         </LinearLayout>
     </ScrollView>
