--- a/app/src/main/res/layout/rec_view_files.xml
+++ b/app/src/main/res/layout/rec_view_files.xml
@@ -30,32 +30,23 @@
 
         <Button
             android:id="@+id/rec_files_open"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            style="@style/material_button"
             android:gravity="center_vertical|end"
             android:text="@string/open"
-            android:textColor="@color/button"
             android:textSize="14sp" />
 
         <Button
             android:id="@+id/rec_files_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            style="@style/material_button"
             android:gravity="center_vertical|end"
             android:text="@string/share"
-            android:textColor="@color/button"
             android:textSize="14sp" />
 
         <Button
             android:id="@+id/rec_files_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            style="@style/material_button"
             android:gravity="center_vertical|end"
             android:text="@string/delete"
-            android:textColor="@color/button"
             android:textSize="14sp" />
     </LinearLayout>
 </HorizontalScrollView>
