--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,13 @@
     <style name="material_edit_text" parent="Widget.Material3.TextInputLayout.OutlinedBox">
         <item name="colorControlActivated">@color/highlight</item>
     </style>
+
+    <style name="material_button" parent="Widget.Material3.Button">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/button</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
 </resources>
