--- a/app/src/main/res/layout/dia_confirm.xml
+++ b/app/src/main/res/layout/dia_confirm.xml
@@ -21,26 +21,22 @@
 
     <Button
         android:id="@+id/dia_confirm_yes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/material_button"
         android:layout_below="@id/dia_confirm_desc"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
         android:text="@string/yes"
         android:textColor="@color/light_black"
         android:textSize="20sp" />
 
     <Button
         android:id="@+id/dia_confirm_no"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/material_button"
         android:layout_below="@id/dia_confirm_yes"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
         android:text="@string/no"
         android:textColor="@color/light_black"
         android:textSize="20sp" />
