--- a/app/src/main/res/layout/dia_import.xml
+++ b/app/src/main/res/layout/dia_import.xml
@@ -97,13 +97,11 @@
 
             <Button
                 android:id="@+id/dia_import_start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/material_button"
                 android:layout_below="@id/dia_import_include_media_layout"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:background="@android:color/transparent"
                 android:text="@string/start"
                 android:textColor="@color/light_black"
                 android:textSize="20sp" />
