--- a/app/src/main/res/layout/activity_edit_card_media.xml
+++ b/app/src/main/res/layout/activity_edit_card_media.xml
@@ -18,13 +18,10 @@
 
             <Button
                 android:id="@+id/add_media_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/material_button"
                 android:layout_margin="12dp"
-                android:gravity="center"
                 android:onClick="addMedia"
                 android:text="@string/edit_card_media_add"
-                android:textColor="@color/button"
                 android:textSize="16sp" />
 
             <androidx.recyclerview.widget.RecyclerView
